Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32045

Crashes in Coco plugin

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 16.0.0
    • None
    • 0f7a386d8 (master)

      I've seen several crashes in the Coco plugin lately, for instance the one below (happened when I stopped an application).

      Note that I'm not using any of its functionality, so I don't know why e.g. a CocoBuildStep even exists.

      =================================================================
      ==3264874==ERROR: AddressSanitizer: SEGV on unknown address 0x000000099597 (pc 0x7be5a3f9611e bp 0x7ffe184c0910 sp 0x7ffe184c0870 T0)
      ==3264874==The signal is caused by a READ memory access.
          #0 0x7be5a3f9611e in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void*, QtPrivate::QSlotObjectBase, int, int const*, QMetaObject const*) (/usr/lib/libQt6Core.so.6+0x19611e) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #1 0x7be5a3f9645f in QObject::connectImpl(QObject const*, void*, QObject const, void*, QtPrivate::QSlotObjectBase, Qt::ConnectionType, int const*, QMetaObject const*) (/usr/lib/libQt6Core.so.6+0x19645f) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #2 0x7be510acd118 in QMetaObject::Connection QObject::connect<void (QAbstractButton::)(bool), void (Coco::Internal::CocoBuildStep::)()>(QtPrivate::FunctionPointer<void (QAbstractButton::)(bool)>::Object const, void (QAbstractButton::)(bool), QtPrivate::ContextTypeForFunctor<void (Coco::Internal::CocoBuildStep::)(), void>::ContextType const*, void (Coco::Internal::CocoBuildStep::*&&)(), Qt::ConnectionType) (/sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/install-root/usr/local/lib/qtcreator/plugins/libCoco.so+0xcd118) (BuildId: 45a92199c423454237a4f25b721d52fce098e255)
          #3 0x7be510ac8f9a in Coco::Internal::CocoBuildStep::createConfigWidget() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/coco/cocobuildstep.cpp:73
          #4 0x7be5201ab793 in ProjectExplorer::BuildStep::doCreateConfigWidget() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildstep.cpp:95
          #5 0x7be5201c2b5c in ProjectExplorer::Internal::BuildStepsWidgetData::BuildStepsWidgetData(ProjectExplorer::BuildStep*) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildstepspage.cpp:149
          #6 0x7be5201c4e40 in ProjectExplorer::Internal::BuildStepListWidget::addBuildStep(int) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildstepspage.cpp:233
          #7 0x7be5201c382b in ProjectExplorer::Internal::BuildStepListWidget::BuildStepListWidget(ProjectExplorer::BuildStepList*) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildstepspage.cpp:180
          #8 0x7be5200f263d in ProjectExplorer::BuildConfiguration::addConfigWidgets(std::function<void (ProjectExplorer::NamedWidget*)> const&) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildconfiguration.cpp:262
          #9 0x7be5201995ff in ProjectExplorer::Internal::BuildSettingsWidget::updateBuildSettings() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildsettingspropertiespage.cpp:178
          #10 0x7be520197ac5 in ProjectExplorer::Internal::BuildSettingsWidget::BuildSettingsWidget(ProjectExplorer::Target*) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/buildsettingspropertiespage.cpp:104
          #11 0x7be520bb9c55 in ProjectExplorer::Internal::BuildOrRunItem::panel() const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/targetsettingspanel.cpp:655
          #12 0x7be520bb9340 in ProjectExplorer::Internal::BuildOrRunItem::data(int, int) const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/targetsettingspanel.cpp:606
          #13 0x7be520bb50bb in ProjectExplorer::Internal::TargetItem::data(int, int) const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/targetsettingspanel.cpp:390
          #14 0x7be520bae4e1 in ProjectExplorer::Internal::TargetGroupItem::data(int, int) const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/targetsettingspanel.cpp:725
          #15 0x7be520a33218 in ProjectExplorer::Internal::ProjectItem::data(int, int) const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectwindow.cpp:536
          #16 0x7be520a37fb3 in ProjectExplorer::Internal::ProjectWindowPrivate::updatePanel() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectwindow.cpp:810
          #17 0x7be520a382e1 in ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}::operator()() const /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectwindow.cpp:821
          #18 0x7be520a42845 in void std::_invoke_impl<void, ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}&>(std::_invoke_other, ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}&) /usr/include/c++/14.2.1/bits/invoke.h:61
          #19 0x7be520a4146b in std::enable_if<is_invocable_r_v<void, ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}&>, void>::type std::__invoke_r<void, ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}&>(ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}&) /usr/include/c++/14.2.1/bits/invoke.h:111
          #20 0x7be520a3ff34 in std::_Function_handler<void (), ProjectExplorer::Internal::ProjectWindowPrivate::registerProject(ProjectExplorer::Project*)::{lambda()#1}>::_M_invoke(std::_Any_data const&) /usr/include/c++/14.2.1/bits/std_function.h:290
          #21 0x7be520522ab7 in std::function<void ()>::operator()() const /usr/include/c++/14.2.1/bits/std_function.h:591
          #22 0x7be520a33535 in ProjectExplorer::Internal::ProjectItem::announceChange() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectwindow.cpp:580
          #23 0x7be520a332ec in ProjectExplorer::Internal::ProjectItem::setData(int, QVariant const&, int) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectwindow.cpp:547
          #24 0x7be520bafd08 in ProjectExplorer::Internal::TargetGroupItemPrivate::rebuildContents() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/targetsettingspanel.cpp:821
          #25 0x7be520bbf33c in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ProjectExplorer::Internal::TargetGroupItemPrivate::)()>::call(void (ProjectExplorer::Internal::TargetGroupItemPrivate::)(), ProjectExplorer::Internal::TargetGroupItemPrivate*, void**) /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
          #26 0x7be520bbe5cd in void QtPrivate::FunctionPointer<void (ProjectExplorer::Internal::TargetGroupItemPrivate::)()>::call<QtPrivate::List<>, void>(void (ProjectExplorer::Internal::TargetGroupItemPrivate::)(), ProjectExplorer::Internal::TargetGroupItemPrivate*, void**) /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
          #27 0x7be520bbe031 in QtPrivate::QCallableObject<void (ProjectExplorer::Internal::TargetGroupItemPrivate::)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase, QObject*, void*, bool) /usr/include/qt6/QtCore/qobjectdefs_impl.h:553
          #28 0x7be5a3fa3396  (/usr/lib/libQt6Core.so.6+0x1a3396) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #29 0x7be520fd5e22 in ProjectExplorer::ProjectExplorerPlugin::settingsChanged() /sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/ProjectExplorer.515e3dc2/qt.headers/moc_projectexplorer.cpp:249
          #30 0x7be5208bd452 in ProjectExplorer::Internal::setPromptToStopSettings(bool) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/projectexplorersettings.cpp:99
          #31 0x7be5200a583b in ProjectExplorer::Internal::AppOutputPane::optionallyPromptToStop(ProjectExplorer::RunControl*) /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/appoutputpane.cpp:699
          #32 0x7be5200a44d3 in ProjectExplorer::Internal::AppOutputPane::stopRunControl() /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/plugins/projectexplorer/appoutputpane.cpp:625
          #33 0x7be5200cac74 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ProjectExplorer::Internal::AppOutputPane::)()>::call(void (ProjectExplorer::Internal::AppOutputPane::)(), ProjectExplorer::Internal::AppOutputPane*, void**) (/sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/install-root/usr/local/lib/qtcreator/plugins/libProjectExplorer.so+0xacac74) (BuildId: 34da423420e876aee7a2444ed3769d2a8e4a6808)
          #34 0x7be5200c6f49 in void QtPrivate::FunctionPointer<void (ProjectExplorer::Internal::AppOutputPane::)()>::call<QtPrivate::List<>, void>(void (ProjectExplorer::Internal::AppOutputPane::)(), ProjectExplorer::Internal::AppOutputPane*, void**) (/sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/install-root/usr/local/lib/qtcreator/plugins/libProjectExplorer.so+0xac6f49) (BuildId: 34da423420e876aee7a2444ed3769d2a8e4a6808)
          #35 0x7be5200c2665 in QtPrivate::QCallableObject<void (ProjectExplorer::Internal::AppOutputPane::)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase, QObject*, void*, bool) (/sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/install-root/usr/local/lib/qtcreator/plugins/libProjectExplorer.so+0xac2665) (BuildId: 34da423420e876aee7a2444ed3769d2a8e4a6808)
          #36 0x7be5a3fa3396  (/usr/lib/libQt6Core.so.6+0x1a3396) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #37 0x7be5a4b1f5d4 in QAction::triggered(bool) (/usr/lib/libQt6Gui.so.6+0x51f5d4) (BuildId: 6b501057d9095626dbd1c4e82bdfc255f2bd9377)
          #38 0x7be5a63dbf16 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<bool>, void, void (QAction::)(bool)>::call(void (QAction::)(bool), QAction*, void**) /usr/include/qt6/QtCore/qobjectdefs_impl.h:145
          #39 0x7be5a63db9ed in void QtPrivate::FunctionPointer<void (QAction::)(bool)>::call<QtPrivate::List<bool>, void>(void (QAction::)(bool), QAction*, void**) /usr/include/qt6/QtCore/qobjectdefs_impl.h:182
          #40 0x7be5a63db823 in QtPrivate::QCallableObject<void (QAction::)(bool), QtPrivate::List<bool>, void>::impl(int, QtPrivate::QSlotObjectBase, QObject*, void*, bool) /usr/include/qt6/QtCore/qobjectdefs_impl.h:553
          #41 0x7be5a3fa3396  (/usr/lib/libQt6Core.so.6+0x1a3396) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #42 0x7be5a4b243c3 in QAction::activate(QAction::ActionEvent) (/usr/lib/libQt6Gui.so.6+0x5243c3) (BuildId: 6b501057d9095626dbd1c4e82bdfc255f2bd9377)
          #43 0x7be5a5210ad4  (/usr/lib/libQt6Widgets.so.6+0x210ad4) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #44 0x7be5a521d58d in QAbstractButton::mouseReleaseEvent(QMouseEvent*) (/usr/lib/libQt6Widgets.so.6+0x21d58d) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #45 0x7be5a534750c in QToolButton::mouseReleaseEvent(QMouseEvent*) (/usr/lib/libQt6Widgets.so.6+0x34750c) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #46 0x7be5a514d375 in QWidget::event(QEvent*) (/usr/lib/libQt6Widgets.so.6+0x14d375) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #47 0x7be5a50fc8cb in QApplicationPrivate::notify_helper(QObject*, QEvent*) (/usr/lib/libQt6Widgets.so.6+0xfc8cb) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #48 0x7be5a5101e58 in QApplication::notify(QObject*, QEvent*) (/usr/lib/libQt6Widgets.so.6+0x101e58) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #49 0x7be5a3f45aa7 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (/usr/lib/libQt6Core.so.6+0x145aa7) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #50 0x7be5a50f3f9c in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) (/usr/lib/libQt6Widgets.so.6+0xf3f9c) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #51 0x7be5a51635c1  (/usr/lib/libQt6Widgets.so.6+0x1635c1) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #52 0x7be5a5164c1f  (/usr/lib/libQt6Widgets.so.6+0x164c1f) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #53 0x7be5a50fc8cb in QApplicationPrivate::notify_helper(QObject*, QEvent*) (/usr/lib/libQt6Widgets.so.6+0xfc8cb) (BuildId: 497d0cf8db2fc9214496a64db3b1fa6831e5dfbe)
          #54 0x7be5a3f45aa7 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (/usr/lib/libQt6Core.so.6+0x145aa7) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #55 0x7be5a477813f in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) (/usr/lib/libQt6Gui.so.6+0x17813f) (BuildId: 6b501057d9095626dbd1c4e82bdfc255f2bd9377)
          #56 0x7be5a47e7723 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/libQt6Gui.so.6+0x1e7723) (BuildId: 6b501057d9095626dbd1c4e82bdfc255f2bd9377)
          #57 0x7be59f37eb86  (/usr/lib/qt6/plugins/platforms/../../../libQt6XcbQpa.so.6+0x51b86) (BuildId: 60a58a3b4bfa0f2814419bcc3c857a0db185ce79)
          #58 0x7be5a3d0d558  (/usr/lib/libglib-2.0.so.0+0x5d558) (BuildId: 7b781c8d1a6e2161838c5d8f3bd797797c132753)
          #59 0x7be5a3d70156  (/usr/lib/libglib-2.0.so.0+0xc0156) (BuildId: 7b781c8d1a6e2161838c5d8f3bd797797c132753)
          #60 0x7be5a3d0ca54 in g_main_context_iteration (/usr/lib/libglib-2.0.so.0+0x5ca54) (BuildId: 7b781c8d1a6e2161838c5d8f3bd797797c132753)
          #61 0x7be5a41a82bc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/libQt6Core.so.6+0x3a82bc) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #62 0x7be5a3f4ff65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/libQt6Core.so.6+0x14ff65) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #63 0x7be5a3f4a11c in QCoreApplication::exec() (/usr/lib/libQt6Core.so.6+0x14a11c) (BuildId: d5e32ccd7bcbf5bb6f4bf0f551350b0eb6c55e96)
          #64 0x63516e02f614 in main /sda/home/christian/dev/qtcreator/super-master/src/qtcreator/src/app/main.cpp:944
          #65 0x7be5a3834e07  (/usr/lib/libc.so.6+0x25e07) (BuildId: 98b3d8e0b8c534c769cb871c438b4f8f3a8e4bf3)
          #66 0x7be5a3834ecb in __libc_start_main (/usr/lib/libc.so.6+0x25ecb) (BuildId: 98b3d8e0b8c534c769cb871c438b4f8f3a8e4bf3)
          #67 0x63516e01e5b4 in _start (/sda/home/christian/dev/qtcreator/super-master/Debug_System_Q_cf5cdc38b16d96f/install-root/usr/local/bin/qtcreator+0x265b4) (BuildId: 0db02ab002088e98dd150547342cf7f6cda935c4)

        For Gerrit Dashboard: QTCREATORBUG-32045
        # Subject Branch Project Status CR V

            mred Markus Redeker
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes