Bug fix: Crash when an application is stopped

Added a new class ButtonWidget that contains the QPushButton that was
before part of the CocoBuildStep class. The change was necessary
because now the button can be destroyed and recreated by Qt
Creator (via CocoBuildStep::createConfigWidget()) wihout creating
dangling pointers or other memory problems.

Fixes: QTCREATORBUG-32045
Change-Id: I4789160cf3d9ef0d286d0456eeb15304cd297677
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>